# ffp

./: CMakeLists.txt  CMakeLists_8txt.html  FileIO_2CMakeLists_8txt.html  FileIO_8cpp.html  FileIO_8cpp__incl.dot  Makefile  Protein_2CMakeLists_8txt.html  Protein_8cpp.html  Protein_8cpp__incl.dot  Protein_8h.html  Protein_8h__dep__incl.dot  Protein_8h__incl.dot  Protein_8h_source.html  README.md  annotated.html  annotated_dup.js  classFFP_1_1Types_1_1Protein-members.html  classFFP_1_1Types_1_1Protein.html  classFFP_1_1Types_1_1Protein.js  classFFP_1_1Types_1_1Protein__coll__graph.dot  classFileIO-members.html  classFileIO.html  classProteinsSequence-members.html  classProteinsSequence.html  classProteinsSequence.js  classes.html  dir_000001_000002.html  dir_000002_000001.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_313caf1132e152dd9b58bea13a4052ca_dep.dot  dir_32797135fe23c5eec817d4836231640f.html  dir_32797135fe23c5eec817d4836231640f.js  dir_41b55b3d46e4103fa55f5c4832e69ea7.html  dir_65a402d14fa1c16afc91832dfb942ea1.html  dir_65a402d14fa1c16afc91832dfb942ea1.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_c0a4e14084e9f7c16bbb9096e2bb1bfb.html  (+51 more)
app/: CMakeLists.txt  main.cpp
cmake/: Docs.cmake
docs/: Doxyfile
example/: CMakeLists.txt  main.cpp
includes/: Protein.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  FileIO.cpp  Protein.cpp  main.cpp
tests/: CMakeLists.txt  (+1 more)
(+20 files in other folders)
